# Master-Android-Desktop

./: CMakeLists.txt  evaluation_service.cpp  evaluation_service.h  main.cpp
